Gaim: The Pimpin' Penguin IM Client that's good for the soul!

version 1.3.1 : 
	* The file transfer details section now also displays the full path to
	  the local file sent/received. 

version 1.3.0 (5/10/2005):
	* Removed parts of the font selection dialog that were not respected
	* Fix being invited to a multi user chat on MSN
	* Multiple SILC accounts should work now (Pekka Riikonen)
	* Fix times on jabber chat backlogs
	* Fix gevolution plugin to compile with e-d-s 1.0 or 1.2
	* Fix gevolution plugin to remember buddy name when someone added you
	  and you then add them
	* Formatting in jabber chats works
	* Fix to prevent MSN disconnecting if you change status while connecting
	* Fixes for two remotely exploitable crash bugs.  See
	  http://gaim.sourceforge.net/security/ for more information.
	* Change to correctly handle adding jabber buddies on ejabberd servers

version 1.2.1 (4/3/2005):
	* URL escaping now works with UTF-8 text. This may break some old log
	 files.
	* Revert to XOR auth for ICQ as the md5 is not fully functional
	* Fix bug with going away while in a jabber chat
	* MSN bug fixes (Felipe Contreras)
	* Escape things properly in IRC
	* Docklet fixes: fix the "1 pixel-wide icon" bug, fix problems with Gaim
	  crashing when the tray manager dies, and work correctly with multi-headed
	  displays where the tray isn't on the primary screen (Robert McQueen)

version 1.2.0 (3/17/2005):
	* Yahoo file receiving and buddy icon receiving work again.
	* Limit animated buddy icon frame rates to 10 frames per second
	  (Nathan Conrad)
	* Fix a bug where portions of your account configuration would
	  fail to be read correctly if you set a proxy user name or
	  password containing invalid XML characters such as < and >
	  (Bastien Durel)
	* Yahoo! privacy improvements (Bleeter)
	* Fix receiving Jabber formatting (broken in 1.1.3)

version 1.1.4 (2/24/2005):
	* Fixed a bug where Yahoo! would lose messages (and any other packet
	  really)