@@ -2,7 +2,8 @@ Gaim: The Pimpin' Penguin IM Client that's good for the soul!
 
 version 1.3.1 : 
 	* The file transfer details section now also displays the full path to
-	  the local file sent/received. 
+	  the local file sent/received.
+	* Yahoo! has the following new "/" commands:  /join, /buzz
 
 version 1.3.0 (5/10/2005):
 	* Removed parts of the font selection dialog that were not respected
